infra/k8s/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main
spec:
  selector:
    app: main
  ports:
    - port: 3001
      targetPort: 3001
